--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1766,12 +1766,21 @@ input, select, textarea {
 		text-align: center;
 	}
 
-	header.major {
+	/*header.major {
 		width: -moz-max-content;
 		width: -webkit-max-content;
 		width: -ms-max-content;
 		width: max-content;
 		margin-bottom: 2em;
+		padding-left: 0; /
+    margin-left: 0; 
+	}*/
+	header.major {
+		display: flex;
+		flex-direction: column;
+		align-items: flex-start; /* Align items to the start (left) */
+		padding-left: 0; /* Ensure there is no left padding */
+		margin-left: 0; /* Ensure there is no left margin */
 	}
 
 		header.major > :first-child {
@@ -1785,16 +1794,29 @@ input, select, textarea {
 				display: block;
 				height: 2px;
 				margin: 0.325em 0 0.5em 0;
-				width: 80%
+				width: auto;
 			}
-
-		header.major > p {
+			header.major > h3 {
+				margin-bottom: 2rem; /* Add space below the h3 if needed */
+			}
+		/*header.major > p {
 			font-size: 0.7em;
 			font-weight: 600;
 			/*letter-spacing: 0.25em;*/
-			margin-bottom: 0;
+			/*margin-bottom: 0;
+			margin-left: auto;
 			/*text-transform: uppercase;*/
-			margin-top: 10rem;
+			/*margin-top: 20rem;
+			width: 100%;
+			clear: both;
+			
+		}*/
+		header.major > p {
+			font-size: 1em; /* Adjust the font size as needed */
+			margin-top: 0.5rem; /* Adjust the top margin to control space between h3 and p */
+			margin-left: 0; /* Ensure there is no left margin */
+			width: 100%; /* Make the paragraph take up the full width */
+			font-weight: 600;
 		}
 
 		body.is-ie header.major > :first-child:after {
@@ -4128,7 +4150,7 @@ Method */
 		}
 	}
 
-	.carousel{
+	/*.carousel{
 		overflow: hidden;
 		width: 100%;
 		
@@ -4148,6 +4170,118 @@ Method */
 		object-fit: cover;
 	}
 	/* Tablets and smaller screens */
+/*@media (max-width: 1400px) {
+    .wrap {
+        grid-auto-columns: 300px;
+        animation: slide-sm 20s linear infinite;
+    }
+
+    .wrap img {
+        width: 280px;
+        height: 200px;
+    }
+}
+
+@keyframes slide-sm {
+    0% {
+        transform: translateX(0);
+    }
+    100% {
+        transform: translateX(calc(-300px * 4)); /* Adjust based on the number of items */
+   /* }
+}
+
+/* Mobile phones */
+/*@media (max-width: 480px) {
+    .wrap {
+        grid-auto-columns: 200px;
+        animation: slide-xs 20s linear infinite;
+    }
+
+    .wrap img {
+        width: 180px;
+        height: 130px;
+    }
+}
+
+@keyframes slide-xs {
+    0% {
+        transform: translateX(0);
+    }
+    100% {
+        transform: translateX(calc(-200px * 4)); /* Adjust based on the number of items */
+    /*}
+}
+/* Modal */
+/*.modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    padding-top: 60px;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0,0.9);
+}
+
+.modal:target {
+    display: block;
+}
+
+.close {
+    position: absolute;
+    top: 15px;
+    right: 35px;
+    color: #fff;
+    font-size: 40px;
+    font-weight: bold;
+    text-decoration: none;
+    transition: 0.3s;
+}
+
+.close:hover,
+.close:focus {
+    color: #bbb;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.modal-content {
+    margin: auto;
+    display: block;
+    width: 80%;
+    max-width: 700px;
+}
+
+@media only screen and (max-width: 700px){
+    .modal-content {
+        width: 100%;
+    }
+}
+*/
+.carousel {
+    overflow: hidden;
+    width: 100%;
+}
+
+.wrap {
+    display: grid;
+    grid-auto-flow: column;
+    grid-auto-columns: 370px;
+    justify-items: stretch;
+}
+
+.wrap img {
+    width: 350px;
+    height: 250px;
+    border-radius: 15px;
+    object-fit: cover;
+}
+
+/* Tablets and smaller screens */
 @media (max-width: 1400px) {
     .wrap {
         grid-auto-columns: 300px;
@@ -4188,6 +4322,56 @@ Method */
     }
     100% {
         transform: translateX(calc(-200px * 4)); /* Adjust based on the number of items */
+    }
+}
+
+/* Modal */
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    padding-top: 60px;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0,0.9);
+}
+
+.modal:target {
+    display: block;
+}
+
+.close {
+    position: absolute;
+    top: 35px;
+    right: 20%;
+    color: #fff;
+    font-size: 40px;
+    font-weight: bold;
+    text-decoration: none;
+    transition: 0.3s;
+}
+
+.close:hover,
+.close:focus {
+    color: #bbb;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.modal-content {
+    margin: auto;
+    display: block;
+    width: 80%;
+    max-width: 700px;
+}
+
+@media only screen and (max-width: 700px){
+    .modal-content {
+        width: 100%;
     }
 }
 
